--- a/EquiTrack/requirements/input/base.in
+++ b/EquiTrack/requirements/input/base.in
@@ -1,17 +1,17 @@
-azure-storage==0.20.2
-carto==1.0.1
+azure-storage==0.36
+carto==1.2.2
 celery==4.1
 dj-database-url==0.5
 dj-static==0.0.6
 Django==1.10.8
-djangorestframework==3.5.3
+djangorestframework==3.8
 djangorestframework-csv==2.1.0
 djangorestframework-jwt==1.11.0
 djangorestframework-hstore==1.3
 djangorestframework-recursive==0.1.2
 djangorestframework-xml==1.3
 django-allauth==0.28.0
-django-analytical==2.2.2
+django-analytical==2.4
 django-autocomplete-light==3.2.1
 django-celery-beat==1.1.1
 django-celery-email==2.0
@@ -20,24 +20,24 @@ django-cors-headers==2.2
 django-debug-toolbar==1.9.1
 django-easy-pdf==0.1.1
 django-filter==1.0.2
-django-fsm==2.4.0
-django-import-export==0.5.1
+django-fsm==2.6
+django-import-export==1.0
 django-generic-links==0.4.0
-django-geojson==2.9.1
-django-leaflet==0.19.0
-django-logentry-admin==1.0.2
-django-model-utils==2.6
-django-mptt==0.8.6
-django-ordered-model==1.3.0
+django-geojson==2.11
+django-leaflet==0.23
+django-logentry-admin==1.0.3
+django-model-utils==3.1.1
+django-mptt==0.9
+django-ordered-model==1.4.3
 django-post_office==2.0.8
 django-redis-cache==1.7.1
-django-rest-swagger==2.1.0
+django-rest-swagger==2.1.2
+django-smart-selects==1.5.4
 django-tenant-schemas==1.9.0
-django-waffle==0.12.0
-django-contrib-comments==1.8.0
+django-waffle==0.14
 djrill==2.1.0
 djangosaml2==0.16.10
-drf-nested-routers==0.11.1
+drf-nested-routers==0.90.2
 flower==0.9.2
 GDAL==1.10.0
 gunicorn==19.6.0
@@ -48,4 +48,4 @@ raven==6.2.1
 tenant-schemas-celery==0.1.7
 
 -e git+https://github.com/unicef/djangosaml2.git@v0.16.11.2#egg=djangosaml2
--e git+https://github.com/robertavram/django-storages.git@1.6.5.3#egg=django-storages
+-e git+https://github.com/robertavram/django-storages.git@1.6.5.1#egg=django-storages
